# Intrusion-detector

./: .dockerignore  .env.example  .gitignore  AI_RULES.md  AUTH_IMPROVEMENTS.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.prod  Dockerfile.ui  Makefile  PIPELINE_README.md  README.md  README_UNIFIED.md  ci_cd_test.py  docker-compose.prod.yml  docker-compose.yml  github-action.mdc  import os.py  intrusion-detector-prd.md  manage.sh  manage_app.sh  promote_to_admin.sql  pyproject.toml  pytest.ini  requirements.txt  requirements_pipeline.txt  run_unified_app.py  setup.py  setup.sh  start.sh  start_app.sh  status.sh  stop.sh  test_ci_cd.py  ui-implementation-plan.md  unit-testing-suite.mdc
.github/workflows/: .github-actions-config.yml  README.md  pull-request.yml  transfer-and-deploy.yml  unified-ci-cd.yml
artifacts/: README.md  model.pkl  model_metadata.json  preprocessor.joblib
config/: README.md
config/development/: docker-compose-supabase.yml  docker-compose.yml
config/production/: Dockerfile.prod  Dockerfile.ui
database/migrations/: add_user.sql
demo_documents/: malicious_activity.txt  normal_activity.txt  suspicious_activity.txt
demo_output/: batch_analysis_report.json
demo_output/analysis_20250804_100220_pipeline_20250804_100220/: classification_result.json  document_analysis.json  pipeline_summary.json  security_analysis.json
docs/: AI_RULES.mdc  CI_CD_GUIDE.md  README.md  USER_GUIDE.md  intrusion-detector-stack.md
docs/api/: ap-implementation-plan.md  api-plan.md  auth-spec.md
docs/architecture/: db-plan.md  db-supabase-migrations.mdc  intrusion-detector-prd.md
docs/deployment/: MODEL_DISTRIBUTION_SOLUTION.md
scripts/: README.md  create_sample_model.py  test-ci-cd.sh
scripts/deployment/: export_model.py  start_app.sh  stop_app.sh
scripts/development/: create_sample_model.py
src/: __init__.py
src/api/: auth.py  main.py  schemas.py
src/api/middleware/: correlation.py
src/api/routes/: auth.py  decisions.py
src/core/: __init__.py  redisclient.py  supabaseclient.py
src/core/config/: redisconfig.py  supabaseconfig.py
src/ml/: model.py
src/ui/: app.py  auth_guard.py  unified_app.py
src/utils/: cache.py
supabase/: .gitignore  config.toml
supabase/migrations/: 20250606094618_initial_schema.sql  20250606094619_add_insert_policy.sql  20250714000000_add_user_role_and_update_policies.sql
tests/: README.md  conftest.py
tests/unit/: test_api.py  test_auth.py  test_ci_cd.py  test_database.py  test_preprocessor.py  test_ui_components.py
(+11 files in other folders)
