[tool.poetry]
name = "intrusion-detector"
version = "0.1.0"
description = "A web application for classifying network traffic as malicious or normal using ML"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.4.2"
gradio = "^3.50.2"
scikit-learn = "^1.3.0"
pandas = "^2.1.0"
numpy = "^1.24.3"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
mlflow = "^2.8.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.6.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 