[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intrusion-detector"
version = "0.1.0"
description = "Machine learning-based intrusion detection system"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.4.2",
    "python-dotenv>=1.0.0",
    "supabase>=2.3.0",
    "mlflow>=2.10.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "httpx>=0.26.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "structlog>=25.3.0",
    "redis>=4.2.0,<5.0.0",
    "fastapi-cache2>=0.2.1",
    "fastapi-cache2[redis]>=0.2.1",
    "xgboost>=2.0.0",
    "psycopg2-binary>=2.9.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["src"] 